--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -7,6 +7,9 @@
         <title>Finch</title>
     </head>
     <body>
+        {% extends 'base.html'%} 
+        {% block content %}
         <h1>Finch About</h1>
+        {% endblock %}
     </body>
 </html>
