--- a/main_app/templates/finches_list.html
+++ b/main_app/templates/finches_list.html
@@ -12,7 +12,7 @@
     <div class="card">
       <div class="card-image">
         <figure class="image is-square">
-          <img src="{{finch.image}}" alt="{{finch.name}}" />
+          <img src="{{finch.img}}" alt="{{finch.name}}" />
         </figure>
       </div>
       <div class="card-header">
