--- a/main_app/templates/finches_list.html
+++ b/main_app/templates/finches_list.html
@@ -5,7 +5,20 @@
 
 {% block content %}
 
-<h4 class="title h4 pt-5">Finches</h4>
+<h1 class="title"> Finches</h1>
+<form class="mb-5" method="get">
+  <div class="field has-addons">
+    <div class="control">
+      <!--  Our input will search by name of artist  -->
+      <input class="input" type="text" name="name" placeholder="name" />
+    </div>
+    <div class="control">
+      <input class="button is-success" type="submit" value="Search" />
+    </div>
+  </div>
+  <!--  This anchor tag will redirect back to artist list without a query param -->
+  <a class="button is-dark" href="{% url 'finches_list' %}">Clear Search</a>
+</form>
 <div class="gallery">
   {% for finch in finches %}
   <a href="">
