--- a/main_app/static/styles/main.css
+++ b/main_app/static/styles/main.css
@@ -32,9 +32,43 @@ h3 {
 }
 
 p {
-    font-size: 12px;
+  font-size: 12px;
 }
 
-h4{
-    color: yellow;
+.detail__img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 500px;
+  background-color: #ffffff;
+  overflow: hidden;
+}
+
+.detail__img::after {
+  content: "";
+  background-image: linear-gradient(transparent 60%, #1f1f1f);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 5;
+}
+
+img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  object-position: top;
+}
+
+.detail__name {
+  position: absolute;
+  z-index: 5;
+  top: 400px;
+}
+
+.detail__container {
+  margin-top: 500px;
 }
