--- a/main_app/templates/finches_list.html
+++ b/main_app/templates/finches_list.html
@@ -24,7 +24,7 @@
 </div>
 <div class="gallery">
   {% for finch in finches %}
-  <a href="">
+  <a href="{% url 'finches_detail' finch.pk %}">
     <div class="card">
       <div class="card-image">
         <figure class="image is-square">
