--- a/main_app/static/styles/main.css
+++ b/main_app/static/styles/main.css
@@ -72,3 +72,41 @@ img {
 .detail__container {
   margin-top: 500px;
 }
+
+.detail__reviews {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.review {
+    width: 100%;
+    padding: 10px;
+    display: grid;
+    grid-template-columns: 0.1fr 3fr 1fr;
+    border-radius: 5px;
+}
+
+.review:hover {
+    background-color: hsla(0, 0%, 100%, 0.1);
+    cursor: pointer;
+}
+
+.bird {
+    width: 100%;
+    padding: 10px;
+    display: grid;
+    /*  New Template Columns  */
+    grid-template-columns: 0.1fr 3fr 0.5fr 0.3fr;
+    border-radius: 5px;
+    color: white;
+  }
+
+  span{
+      color: white;
+      background-color: aqua;
+  }
+
+  span h4{
+      color: whitesmoke;
+  }
