--- a/main_app/templates/finches_detail.html
+++ b/main_app/templates/finches_detail.html
@@ -4,6 +4,35 @@
     <img src="{{finch.img}}" alt="{{finch.name}}" />
     <h1 class="title">{{finch.name}}</h1>
 </div>
+<form class="mb-5" action="{% url 'rating_create' finch.pk %}" method="post">
+    {% csrf_token %}
+    <div class="field has-addons">
+        <div class="control">
+            <input
+                class="input"
+                type="text"
+                name="Name"
+                placeholder="Name"
+                required
+            />
+        </div>
+        <div class="control">
+            <input
+                class="input"
+                type="number"
+                name="review"
+                placeholder="reviews"
+                min="1"
+                max="5"
+                required
+            />
+        </div>
+        <div class="control">
+            <input class="button is-primary" type="submit" value="Add Rating" />
+        </div>
+    </div>
+</form>
+
 <div class="detail__container">
     <div class="buttons">
         <div class="buttons">
@@ -19,14 +48,29 @@
         </span>
     </a>
 </div>
+
 <div>
+    <a href="{% url 'finches_delete' finch.pk %}" class="button is-danger">Delete
+        <span class="icon">
+            <i class="fas fa-trash-alt"></i>
+        </span>
+    </a>
+</div>
+
+<div class="detail__reviews mb-5">
+    <h3 class="title is-3">Reviews</h3>
+    <div class="review">
    {% for rating in finch.ratings.all %}
    <span>{{rating.review}}</span>
    <span>{{rating.rating}}</span>
 </div>
-
     {% empty %}
+    <article class="message">
+        <div class="message-header">
     <span>No rating to display</span>
+        </div>
+    </article>
 
     {% endfor %}
+</div>
 {% endblock %}
