--- a/main_app/templates/finches_create.html
+++ b/main_app/templates/finches_create.html
@@ -2,7 +2,7 @@
 {% block content %}
 <h1>Add a Finch</h1>
 
-<form method="post">
+<form method="post" class="Create_form">
 <!-- Security Feature  -->
   {% csrf_token %} 
 <!--  Generate inputs  -->
