--- a/main_app/templates/finches_list.html
+++ b/main_app/templates/finches_list.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-<h1 class="title"> {{header}}</h1>
+<h1 class="title header"> {{header}}</h1>
 <form class="mb-5" method="get">
   <div class="field has-addons">
     <div class="control">
