--- a/main_app/templates/finches_create.html
+++ b/main_app/templates/finches_create.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %} 
 {% block content %}
-<h1>Add a Finch</h1>
-
+<br />
+    <h1 class="title">Add a Finch</h1>
+<br />
 <form method="post" class="Create_form">
 <!-- Security Feature  -->
   {% csrf_token %} 
