--- a/main_app/static/styles/main.css
+++ b/main_app/static/styles/main.css
@@ -4,14 +4,17 @@ body {
     min-height: 100vh;
 }
 
-h1,
 h2,
 h3 {
     color:red;
 }
 
 .title {
-    color: green;
+    background-color: green;
+    width: 50%;
+    color: yellow;
+    margin: 20px 20px;
+    padding-top: 5PX;
 }
 
 .header {
@@ -36,11 +39,15 @@ h3 {
 }
 
 .Create_form{
-    background-color: yellow;
+    background-color:cornflowerblue;
+    padding-left: 40px;
+    color:black;
+    max-width: 40%;
 }
 
 p {
   font-size: 12px;
+  color: white;
 }
 
 .detail__img {
@@ -79,12 +86,21 @@ img {
 
 .detail__container {
   margin-top: 500px;
+  margin-bottom: 20px;
 }
 
 .detail__reviews {
     width: 100%;
     display: flex;
     flex-direction: column;
+}
+
+.button{
+    width: 100px;
+}
+
+.buttons_container{
+    margin-top: 10px;
 }
 
 .review {
@@ -95,11 +111,19 @@ img {
     border-radius: 5px;
 }
 
+.add_Rating{
+    margin-top: 10px;
+    padding: 20px;
+}
+
 .review:hover {
-    background-color: hsla(0, 0%, 100%, 0.1);
+    background-color: hsla(155, 80%, 32%, 0.553);
     cursor: pointer;
 }
 
+.review_pages{
+    background-color: #ffffff;
+}
 .bird {
     width: 100%;
     padding: 10px;
@@ -117,4 +141,8 @@ img {
 
   span h4{
       color: crimson;
+  }
+
+  .reviews_list{
+      width: 100px;
   }
