--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -14,6 +14,20 @@
     </head>
     <body >
 
+        {% if user.is_authenticated %}
+                    <div class="navbar-menu navbar-end">
+                        <span class="navbar-item a_tag welcome">Welcome: {{user.username}}</span>
+                        <!-- <a class="navbar-item" href="/finches">Finches</a> -->
+                        <a class="navbar-item a_tag" href="{% url 'logout' %}">Logout</a>
+                    </div>
+                {% else %}
+                    <div class="navbar-menu navbar-end">
+                        <a class="navbar-item a_tag " href="{% url 'login' %}">Log In</a>
+
+                        <a class="navbar-item a_tag" href="{% url 'signup' %}">Sign Up</a>
+                    </div>
+                {% endif %}
+
         <nav class="navbar is-info" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a class="navbar-item" href="/">Birds</a>
@@ -24,11 +38,11 @@
                 </a>
             </div>
             <div class="navbar-menu navbar-start">
-                <a class="navbar-item" href="/about">About</a>
-            </div>
-            <div class="navbar-menu navbar-end">
                 <a class="navbar-item" href="/finches">Finches</a>
             </div>
+            <!-- <div class="navbar-menu navbar-start">
+                <a class="navbar-item" href="/about">About</a>
+            </div> -->
         </nav>
         <div class="container">
 
