--- a/main_app/templates/finches_create.html
+++ b/main_app/templates/finches_create.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} 
 {% block content %}
 <br />
-    <h1 class="title">Add a Finch</h1>
+    <h1 class="header">Add a Finch</h1>
 <br />
 <form method="post" class="Create_form">
 <!-- Security Feature  -->
@@ -9,7 +9,7 @@
 <!--  Generate inputs  -->
   {{form.as_p}} 
 <!--  Submit form  -->
-  <input type="submit" value="Submit" />
+  <input type="submit" value="Submit"  class="submit"/>
 </form>
 
 {% endblock %}
