--- a/main_app/templates/finches_list.html
+++ b/main_app/templates/finches_list.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-<h1 class="title header"> {{header}}</h1>
+<h1 class="header"> {{header}}</h1>
 <form class="mb-5" method="get">
   <div class="field has-addons">
     <div class="control">
@@ -19,13 +19,13 @@
   <!--  This anchor tag will redirect back to artist list without a query param -->
   <a class="button is-dark" href="{% url 'finches_list' %}">Clear Search</a>
 </form>
-<div>
-    <a class="button is-dark" href="{% url 'finches_create' %}">Add Finch</a>
+<div class="add_finch">
+    <a class="button is-success" href="{% url 'finches_create' %}">Add Finch</a>
 </div>
 <div class="gallery">
   {% for finch in finches %}
   <a href="{% url 'finches_detail' finch.pk %}">
-    <div class="card">
+    <div class="card ">
       <div class="card-image">
         <figure class="image is-square">
           <img src="{{finch.img}}" alt="{{finch.name}}" />
@@ -42,6 +42,6 @@
       <p>No finches Available</p>
     </div>
   </article>
-  {% endfor %}
 </div>
+  {% endfor %}
 {% endblock %}
