--- a/main_app/templates/finches_create.html
+++ b/main_app/templates/finches_create.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} 
 {% block content %}
 <br />
-    <h1 class="header">Add a Finch</h1>
+    <h1 class="header">Add New Finch</h1>
 <br />
 <form method="post" class="Create_form">
 <!-- Security Feature  -->
