--- a/main_app/static/styles/main.css
+++ b/main_app/static/styles/main.css
@@ -156,7 +156,7 @@ form{
 
 span{
     color:mediumblue;
-    background-color:lightskyblue;
+    background-color:rgb(235, 231, 107);
 }
 
 span h4{
