--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -14,7 +14,7 @@
     </head>
     <body >
 
-        <nav class="navbar is-info" role="navigation" aria-label="main navigation">
+        <nav class="navbar is-success" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a class="navbar-item" href="/">Birds</a>
                 <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
