--- a/main_app/templates/finches_update.html
+++ b/main_app/templates/finches_update.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} 
+{% block content %}
 <h1 class="header">Update {{finch.name}}</h1>
 
 <form action="" method="post" class="Create_form">
